# M1CHPS-Stage-MAQAO

./: CMakeLists.txt  README.md  occurrences.py
asm/: Makefile  config.json
auto/: CMakeLists.txt  config.json  job.slurm  template_script.json
auto/include/: init.h
auto/maqao_2024-07-10_11-50-44/: config.json  content.json  last_command.txt
auto/maqao_2024-07-10_11-50-44/OTTER/: input_manifest.csv  output_manifest.csv
auto/maqao_2024-07-10_11-50-44/RESULTS/init_one_html/: application.html  config.html  env.html  expert_summary.html  fcts_and_loops.html  index.html  log.html  loops_index.html  outputs.html  panel.html  summary.html  topology.html
auto/maqao_2024-07-10_11-50-44/RESULTS/init_one_html/functions/: empty_function.html  init_8.html
auto/maqao_2024-07-10_11-50-44/RESULTS/init_one_html/loops/: empty_loop.html  init_4.html
auto/maqao_2024-07-10_11-50-44/RESULTS/init_one_html/modals/: empty_lb.html  fct_init_8.html  init_4.html  material_configuration.html
auto/maqao_2024-07-10_11-50-44/RESULTS/init_one_html/topo/: run_0_turpanlogin1_1958928_1958928.html
auto/maqao_2024-07-10_11-50-44/binaries/: init
auto/maqao_2024-07-10_11-50-44/logs/: log.txt
auto/maqao_2024-07-10_11-50-44/shared/lprof_npsu_run_0/: lprof_CPUs.csv  lprof_blocks.csv  lprof_blocks_turpanlogin1_1958928_1958928.csv  lprof_functions.csv  lprof_functions_turpanlogin1_1958928_1958928.csv  lprof_libraries.csv  lprof_loops.csv  lprof_loops_turpanlogin1_1958928_1958928.csv  lprof_modules.csv
auto/maqao_2024-07-10_11-50-44/shared/lprof_npsu_run_0/callchains/: cc_fcts.cc
auto/maqao_2024-07-10_11-50-44/shared/run_0/: config.json  content.json  expert_loops.csv  expert_run.csv  global_metrics.csv  local_vars.csv  lprof_categorization.csv  material_config.csv  status.csv
auto/maqao_2024-07-10_11-50-44/static_data/: binaries_status.csv
auto/maqao_2024-07-10_11-50-44/static_data/asm/: fct_init_8.csv  init_4.csv
auto/maqao_2024-07-10_11-50-44/static_data/cqa/: cqa_context.json  fct_init_8_html.json  fct_init_8_text.json  init_4_cqa.csv  init_4_html.json  init_4_text.json
auto/maqao_2024-07-10_11-50-44/static_data/groups/: init_4.csv
auto/maqao_2024-07-10_11-50-44/static_data/hierarchy/: fct_init_8.json
auto/maqao_2024-07-10_11-50-44/static_data/sources/: compilation_options.csv  fct_init_8.txt  src_init_4.txt
auto/maqao_2024-07-10_11-50-44/tools/lprof_npsu_run_0/: env_turpanlogin1-1958928.txt  executable.lprof  lprof.launch  lscpu_turpanlogin1-1958928.txt  options.lua  procinfo_turpanlogin1-1958928.json
auto/src/: init.c  main.c
dgemm/: Makefile  main.c  (+1 more)
dotprod/: CMakeLists.txt  config.json  results_20000000_100.txt
dotprod/include/: dotprod.h
dotprod/results/: index.html
dotprod/src/: dotprod.c  main.c
lu/: CMakeLists.txt  config.json
lu/include/: lu.h
lu/src/: lu.c  main.c
(+147 files in other folders)
